# ray-tracing-one-weekend-taichi

./: .coverage  .flake8  bvh.py  camera.py  hittable.py  main.py  material.py  noxfile.py  pyproject.toml  ray.py  sphere.py  vector.py
.github/workflows/: tests.yaml
docs/: conf.py
src/TaichiRender/: camera.py  hittable.py  main.py  material.py  ray.py  vector.py
tests/: test_main.py
