[project]
name = "TaichiRender"
version = "0.1.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"


[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["TaichiRender"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.darglint]
strictness = "short"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
